- Improved: Blair has rewritten Authorize.net's payment calls 
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Removed pre-0.1 update code from runonce.php

Version 0.2.6 (2011-03-01)
------------------------------
- Added label for toggle button in product tree
- Added missing 'enabled' label to tl_iso_shipping_options (Ticket #373)
- Added: automatically disable page cache for sites with customer-related modules such as Cart (Ticket #392)
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Improved: Label for payment method is no longer mandatory (will use name if not set)
- Improved: Made text fields for meta description & meta keywords smaller (Ticket #386)
- Improved: Added javascript confirmation before deleting address (Ticket #328)
- Improved: Use generic labels for redirecting to payment provider on checkout
- Improved order PDF printing, fixed several bugs (Ticket #376, Ticket #356)
- Fixed ##newsletter.css## in HTML email
- Fixed issue with simple tokens in mail template subject
- Fixed issue with HTML in plain text emails
- Fixed CSS classes for new address fields in checkout module
- Fixed publish toggle not working for non-admins
- Fixed hardcoded labels in order history/details (Ticket #382)
- Fixed unlimited downloads only downloadable once (Ticket #383)
- Fixed filters overwriting each other (Ticket #363)
- Fixed issues with email messages (Ticket #391)
- Fixed tax surcharge calculation for prices including taxes
- Fixed bug in explode() for the filterFields template variable.
- Fixed: Address was not added to address book correctly
- Fixed: Downloads in PDF invoice caused fatal error
- Fixed: Product filter searched for field default value (Ticket #377)
- Fixed: Moved cart & checkout table summary to language file (Ticket #338)
- Fixed: Adjust Order Total Shipping to account for shipping-exempt products (Ticket #398)

- Adopted Contao Core Ticket #2853
