@@ -313,5 +313,26 @@ class IsotopeFrontend extends Frontend
 		// Return the path to new image
 		return $strCacheName;
 	}
+	
+	
+	/**
+	 * Hook callback for changelanguage extension to support language switching on product reader page
+	 *
+	 * @param  array
+	 * @param  string
+	 * @param  array
+	 * @return array
+	 */
+	public function translateProductUrls($arrGet, $strLanguage, $arrRootPage)
+	{
+		$strProduct = $this->Input->get('product');
+		
+		if ($strProduct != '')
+		{
+			$arrGet['url']['product'] = $strProduct;
+		}
+		
+		return $arrGet;
+	}
 }
 
